v2.1.0 - Added anti-flicker, code works correctly for the subpages, added files for the Color Meaning page
Anti-flicker - when the page loads, the background image took some time to load (<0.1s), so the gradient was visible for a really short time. Now, the background has a color added on page load, so the bg image doesn't flicker.

Font path was changed according to the current page, so now it loads correctly.
Additionally, the ucp-(color model) class could be added to a non-existent element, now it's fixed.

Added HTML and CSS files for the Color Meaning page.

--- a/int_resources/css/general.css
+++ b/int_resources/css/general.css
@@ -30,12 +30,12 @@
     
     --wrapperColor1:#D4DFE5;        /* Main content box shadow color 1 */
     
-    --shade1:#FFFFFF;                   /* Background-color 1 */
-    --shade2:#F9F9F9;                   /* Background-color 3 */
-    --shade3:rgb(248,250,254,0.92);     /* Background-color 6 */
-    --shade4:#ECECEC;                   /* Background-color 5b */
-    --shade5:#DDE6EA;                   /* Background-color 5 */
-    --shade6:#D6D6D6;                   /* Background-color 5 */
+    --shade1:#FFFFFF;                   /* Shade 1 */
+    --shade2:#F9F9F9;                   /* Shade 2 */
+    --shade3:rgb(248,250,254,0.92);     /* Shade 3 */
+    --shade4:#ECECEC;                   /* Shade 4 */
+    --shade5:#DDE6EA;                   /* Shade 5 */
+    --shade6:#D6D6D6;                   /* Shade 6 */
 
     
     --txt1:#222;                    /* Text color 1 */    
@@ -64,14 +64,14 @@
     
     --wrapperColor1:#23292A;
     
-    --shade1:#212527;               /* Background-color 1 */
-    --shade2:#1B1E1F;               /* Background-color 3 */
-    --shade3:rgb(17,19,22,0.95);    /* Background-color 6 */ 
-    --shade4:#151718;               /* Background-color 5b */
-    --shade5:#343738;               /* Background-color 5 */
-    --shade6:#3B3B42;                   /* Background-color 5 */
-   
+    --shade1:#212527;               /* Shade 1 */
+    --shade2:#1B1E1F;               /* Shade 2 */
+    --shade3:rgb(17,19,22,0.95);    /* Shade 3 */
+    --shade4:#151718;               /* Shade 4 */
+    --shade5:#343738;               /* Shade 5 */
+    --shade6:#3B3B42;               /* Shade 6 */
     
+
     --txt1:#FAFAFA;                 /* Text color 1 */    
     --txt2:#222;                    /* Text color 2 */
     --txt-faded:#D5D5D5;            /* Text faded color 1 */
@@ -692,6 +692,28 @@ footer .wrapper{
 
 .dark-mode .main-background{
     background-image:url("../img/bgreversed-dark.svg");
+}
+
+.main-background:after{
+    content:"";
+    width:100%;
+    height:100%;
+    position:absolute;
+    top:0;
+    left:0;
+    animation:antiFlicker 0.1s;
+}
+
+@keyframes antiFlicker{
+    0%{
+        background-color:var(--shade2);
+    }
+    75%{
+        background-color:var(--shade2);
+    }
+    100%{
+        background-color:transparent;
+    }
 }
 
 @keyframes mainBgShrink{
